Update bundles/org.openhab.binding.eyeonwater/src/main/java/org/openhab/binding/eyeonwater/internal/handler/EyeOnWaterBridgeHandler.java
Co-authored-by: lsiepel <leosiepel@gmail.com>
Signed-off-by: Richard Koshak <rkoshak@users.noreply.github.com>